# my-zoomcamp-2026

./: .gitignore  SQL_en_1_heure_29_janvier_2026.ipynb
01-docker/docker-sql/: 03-dockerizing-pipeline.md
01-docker/docker-sql/02_pipeline/: pyproject.toml
01-docker/terraform/: 2_gcp_overview.md
02-workflow-orchestration/: docker-compose.yml  test_APi_key.py
02-workflow-orchestration/flows/: 09_GCP_taxi_fhv_scheduled_GCS_to_BQ.yml  09_gcp_taxi_scheduled_BQ_only.yaml  09c_gcp_taxi_loop.yml  09c_gcp_taxi_loop_BUGGY.yml
03-data-warehouse/: big_query_hw.md  big_query_hw.sql
03-data-warehouse/extras/: web_to_gcs.py  web_to_gcs_with_progress_bar.py
04-analytics-engineering/: README.md
04-analytics-engineering/notes/: 0_intro_to_data_modeling.md  1_what_is_dbt.md  2_Differences between dbt Core and dbt Cloud.md  3_Project_Setup_A_Cloud.md  4_Project_Setup_B_local_(not_done).md  5_1_dbt_project_structure.xmind  5_1_dbt_project_structure_explained.md  5_2_dbt_sources.md  5_3_dbt_models.md  5_4_dbt_seeds_and_macros.md  5_5_dbt_documentation.md  5_5_dbt_tests.md  5_6_dbt_documentation.md  5_7_dbt_packages.md  5_8_dbt_commands.md  summaries.md
04-analytics-engineering/setup/: new_cloud_setup.md
06-batch/: .gitignore  pyproject.toml
06-batch/code/: 03_test.ipynb  04_pyspark.ipynb
cohorts/2026/02-workflow-orchestration/: Q3_query.sql  Q4_query.sql  Q5_query.sql  README.md  x-post.md
cohorts/2026/03-data-warehouse/: homework.md  queries.sql  (+1 more)
cohorts/2026/workshops/dlt/my-dlt-pipeline/: open_library_pipeline.py  open_library_top_authors.py  pyproject.toml
(+6 files in other folders)
